{
  "version": 4,
  "terraform_version": "1.4.6",
  "serial": 193,
  "lineage": "d9dd244b-5566-e29f-41d6-775a0d7a493c",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "summersEip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051a97f40bab801f8",
            "domain": "vpc",
            "id": "eipalloc-051a97f40bab801f8",
            "network_border_group": "ca-central-1",
            "public_dns": "ec2-3-96-41-249.ca-central-1.compute.amazonaws.com",
            "public_ip": "3.96.41.249",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.summersVpcIG",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "summersHost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea18256de20ecdfc",
            "arn": "arn:aws:ec2:ca-central-1:568305562431:instance/i-04bee129277236eaa",
            "associate_public_ip_address": true,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04bee129277236eaa",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "summerskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0905d4813fbebd41e",
            "private_dns": "ip-172-22-1-123.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.22.1.123",
            "public_dns": "ec2-15-222-234-22.ca-central-1.compute.amazonaws.com",
            "public_ip": "15.222.234.22",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e3a67a58a5ac74f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c945b532348c7244",
            "tags": {
              "Name": "Summersbastionhost",
              "Subnet": "Public",
              "project": "Summers"
            },
            "tags_all": {
              "Name": "Summersbastionhost",
              "Subnet": "Public",
              "project": "Summers"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0acf6f8f43ff26f01"
            ]
          },
          "dependencies": [
            "aws_key_pair.summerskey",
            "aws_security_group.summersElbSg",
            "aws_security_group.summersSg",
            "aws_subnet.summersPubSub1",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "summerswebserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0ea18256de20ecdfc",
            "arn": "arn:aws:ec2:ca-central-1:568305562431:instance/i-05c550f1819781b99",
            "associate_public_ip_address": false,
            "availability_zone": "ca-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-05c550f1819781b99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "summerskey",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00236ee0395fd313f",
            "private_dns": "ip-172-22-3-153.ca-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.22.3.153",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ef8e53f6bd56de69",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00aeefdbd8a6d63d5",
            "tags": {
              "Name": "Summers web server",
              "Subnet": "Private",
              "project": "Summers"
            },
            "tags_all": {
              "Name": "Summers web server",
              "Subnet": "Private",
              "project": "Summers"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-068c4bc2b6d5872be"
            ]
          },
          "dependencies": [
            "aws_eip.summersEip",
            "aws_internet_gateway.summersVpcIG",
            "aws_key_pair.summerskey",
            "aws_nat_gateway.summersNg",
            "aws_security_group.summersElbSg",
            "aws_subnet.summersPrivSub1",
            "aws_subnet.summersPubSub1",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "summersVpcIG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:568305562431:internet-gateway/igw-01913ff97f3ccfd86",
            "id": "igw-01913ff97f3ccfd86",
            "owner_id": "568305562431",
            "vpc_id": "vpc-084380f8d30c66f60"
          },
          "dependencies": [
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "summersLb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:568305562431:loadbalancer/app/summersLb/0d97114ac64ff18f",
            "arn_suffix": "app/summersLb/0d97114ac64ff18f",
            "desync_mitigation_mode": "defensive",
            "dns_name": "summersLb-168237795.ca-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ca-central-1:568305562431:loadbalancer/app/summersLb/0d97114ac64ff18f",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "summersLb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-068c4bc2b6d5872be"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0c945b532348c7244"
              },
              {
                "subnet_id": "subnet-0e9c054db76b1883a"
              }
            ],
            "subnets": [
              "subnet-0c945b532348c7244",
              "subnet-0e9c054db76b1883a"
            ],
            "vpc_id": "vpc-084380f8d30c66f60",
            "xff_header_processing_mode": "append",
            "zone_id": "ZQSVJUPU6J1EY"
          },
          "dependencies": [
            "aws_security_group.summersElbSg",
            "aws_subnet.summersPubSub1",
            "aws_subnet.summersPubSub2",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "summersLbListener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:568305562431:listener/app/summersLb/0d97114ac64ff18f/9afd2ce63d32359e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:568305562431:targetgroup/summersLbTg/5f24b0b841a9519c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:568305562431:listener/app/summersLb/0d97114ac64ff18f/9afd2ce63d32359e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ca-central-1:568305562431:loadbalancer/app/summersLb/0d97114ac64ff18f",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.summersLb",
            "aws_lb_target_group.summersLbTg",
            "aws_security_group.summersElbSg",
            "aws_subnet.summersPubSub1",
            "aws_subnet.summersPubSub2",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "summersLbTg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ca-central-1:568305562431:targetgroup/summersLbTg/5f24b0b841a9519c",
            "arn_suffix": "targetgroup/summersLbTg/5f24b0b841a9519c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 70,
                "matcher": "200,202",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 40,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ca-central-1:568305562431:targetgroup/summersLbTg/5f24b0b841a9519c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "summersLbTg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-084380f8d30c66f60"
          },
          "dependencies": [
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "summersTgAttachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ca-central-1:568305562431:targetgroup/summersLbTg/5f24b0b841a9519c-20230704041005832000000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:ca-central-1:568305562431:targetgroup/summersLbTg/5f24b0b841a9519c",
            "target_id": "i-05c550f1819781b99"
          },
          "dependencies": [
            "aws_eip.summersEip",
            "aws_instance.summerswebserver",
            "aws_internet_gateway.summersVpcIG",
            "aws_key_pair.summerskey",
            "aws_lb_target_group.summersLbTg",
            "aws_nat_gateway.summersNg",
            "aws_security_group.summersElbSg",
            "aws_subnet.summersPrivSub1",
            "aws_subnet.summersPubSub1",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "summersNg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-051a97f40bab801f8",
            "association_id": "eipassoc-07583324319747187",
            "connectivity_type": "public",
            "id": "nat-0fa9f2c93b063c631",
            "network_interface_id": "eni-0ff21bb60e45a6dc7",
            "private_ip": "172.22.1.136",
            "public_ip": "3.96.41.249",
            "subnet_id": "subnet-0c945b532348c7244"
          },
          "dependencies": [
            "aws_eip.summersEip",
            "aws_internet_gateway.summersVpcIG",
            "aws_subnet.summersPubSub1",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "summersPrivRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:568305562431:route-table/rtb-063c5d82a764ada4c",
            "id": "rtb-063c5d82a764ada4c",
            "owner_id": "568305562431",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0fa9f2c93b063c631",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Summers private subnet route table"
            },
            "tags_all": {
              "Name": "Summers private subnet route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-084380f8d30c66f60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.summersEip",
            "aws_internet_gateway.summersVpcIG",
            "aws_nat_gateway.summersNg",
            "aws_subnet.summersPubSub1",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "summersPubRouteTable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:568305562431:route-table/rtb-0ec0f32994c5f2b0d",
            "id": "rtb-0ec0f32994c5f2b0d",
            "owner_id": "568305562431",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01913ff97f3ccfd86",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Summers internet access route table"
            },
            "tags_all": {
              "Name": "Summers internet access route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-084380f8d30c66f60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.summersVpcIG",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "summersPrivSubAssoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2853836379c6057",
            "route_table_id": "rtb-063c5d82a764ada4c",
            "subnet_id": "subnet-00aeefdbd8a6d63d5"
          },
          "dependencies": [
            "aws_eip.summersEip",
            "aws_internet_gateway.summersVpcIG",
            "aws_nat_gateway.summersNg",
            "aws_route_table.summersPrivRouteTable",
            "aws_subnet.summersPrivSub1",
            "aws_subnet.summersPubSub1",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "summersPrivSubAssoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0397dd4657ce09332",
            "route_table_id": "rtb-063c5d82a764ada4c",
            "subnet_id": "subnet-03bebad695e3ba30c"
          },
          "dependencies": [
            "aws_eip.summersEip",
            "aws_internet_gateway.summersVpcIG",
            "aws_nat_gateway.summersNg",
            "aws_route_table.summersPrivRouteTable",
            "aws_subnet.summersPrivSub2",
            "aws_subnet.summersPubSub1",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "summersPubSubAssoc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036a8ec9648fbd1d2",
            "route_table_id": "rtb-0ec0f32994c5f2b0d",
            "subnet_id": "subnet-0c945b532348c7244"
          },
          "dependencies": [
            "aws_internet_gateway.summersVpcIG",
            "aws_route_table.summersPubRouteTable",
            "aws_subnet.summersPubSub1",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "summersPubSubAssoc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-025f800c48530ae53",
            "route_table_id": "rtb-0ec0f32994c5f2b0d",
            "subnet_id": "subnet-0e9c054db76b1883a"
          },
          "dependencies": [
            "aws_internet_gateway.summersVpcIG",
            "aws_route_table.summersPubRouteTable",
            "aws_subnet.summersPubSub2",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "summersElbSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:568305562431:security-group/sg-068c4bc2b6d5872be",
            "description": "Sec group for summers Elastic load balancer ",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-068c4bc2b6d5872be",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "summersElbSg",
            "name_prefix": "",
            "owner_id": "568305562431",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-084380f8d30c66f60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "summersSg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:568305562431:security-group/sg-0acf6f8f43ff26f01",
            "description": "Sec group for summers vpc",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0acf6f8f43ff26f01",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [
                  "sg-068c4bc2b6d5872be"
                ],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "summersSg",
            "name_prefix": "",
            "owner_id": "568305562431",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-084380f8d30c66f60"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.summersElbSg",
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "summersPrivSub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:568305562431:subnet/subnet-00aeefdbd8a6d63d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "172.22.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00aeefdbd8a6d63d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568305562431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet 1 of 2"
            },
            "tags_all": {
              "Name": "Private subnet 1 of 2"
            },
            "vpc_id": "vpc-084380f8d30c66f60"
          },
          "dependencies": [
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "summersPrivSub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:568305562431:subnet/subnet-03bebad695e3ba30c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "172.22.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03bebad695e3ba30c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "568305562431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Private subnet 2 of 2"
            },
            "tags_all": {
              "Name": "Private subnet 2 of 2"
            },
            "vpc_id": "vpc-084380f8d30c66f60"
          },
          "dependencies": [
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "summersPubSub1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:568305562431:subnet/subnet-0c945b532348c7244",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "172.22.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c945b532348c7244",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568305562431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet 1 of 2"
            },
            "tags_all": {
              "Name": "Public subnet 1 of 2"
            },
            "vpc_id": "vpc-084380f8d30c66f60"
          },
          "dependencies": [
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "summersPubSub2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:568305562431:subnet/subnet-0e9c054db76b1883a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "172.22.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e9c054db76b1883a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "568305562431",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public subnet 2 of 2"
            },
            "tags_all": {
              "Name": "Public subnet 2 of 2"
            },
            "vpc_id": "vpc-084380f8d30c66f60"
          },
          "dependencies": [
            "aws_vpc.summersVpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "summersVpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:568305562431:vpc/vpc-084380f8d30c66f60",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.22.0.0/16",
            "default_network_acl_id": "acl-091771cf5f5b730cb",
            "default_route_table_id": "rtb-0aa13a5648678ad81",
            "default_security_group_id": "sg-0140c8479f773b1fb",
            "dhcp_options_id": "dopt-00a452f0088f993c0",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-084380f8d30c66f60",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0aa13a5648678ad81",
            "owner_id": "568305562431",
            "tags": {
              "Name": "Vpc 1"
            },
            "tags_all": {
              "Name": "Vpc 1"
            }
          }
        }
      ]
    }
  ]
}